# boram_safety

./: .dockerignore  .env.example  .gitignore  .gitmessage  IMPROVEMENTS.md  README.md  Start-All.ps1  Start-Dev.ps1  Stop-All.ps1  docker-compose.yml  fix_imports.py  package-lock.json  package.json  pyproject.toml  setup.py  tmp_product_page.html  tmp_product_page2.html
backend/: Dockerfile  __init__.py  check_data.py  create_audit_table.py  create_tables.py  database.py  dummy_data.py  main.py  migrate_to_postgresql.py  pyproject.toml  requirements.txt  setup.py  simple_db_test.py  test_client_check.py  test_db_connection.py
backend/admin/: router.py
backend/core/: __init__.py  auth.py  config.py  constants.py  exceptions.py  logger.py
backend/crud/: __init__.py  audit.py  category.py  company.py  draft.py  image.py  inquiry.py  product.py  review.py  settings.py
backend/database/: __init__.py
backend/models/: __init__.py  audit.py  category.py  company.py  draft.py  (+6 more)
docs/: ADMIN-REQUIREMENTS.md  API-REFERENCE.md  API-USAGE.md  CHANGELOG.md  CURRENT-ISSUES.md  DEVELOPMENT-GUIDE.md  ENVIRONMENT.md  EXCEL-GUIDE.md  FEATURES.md  FINAL-RECOMMENDATIONS.md  GETTING-STARTED.md  LOGGING-POLICY.md  PROJECT-COMPLETE.md  PROJECT-STATUS.md  README.md  READY-FOR-FRIEND.md  SECURITY-ALERT.md  STRUCTURE.md  TESTING.md  TODO.md  backend-api.md  backend-models.md  backend-overview.md  deployment.md  frontend-components.md  frontend-style.md  project-overview.md  work-log.md
frontend/: .babelrc  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json
(+79 files in other folders)
